webpack serve changes

--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta charset="utf-8">
+        <base href="." />
         <title>Angular template</title>
     </head>
     <body ng-app="app">
